--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -673,6 +673,26 @@ img.music-photos{
 	background-color: #fac846;
 	margin-top: -38px;
 }
+
+.select-geslacht {
+	margin-top: 20px;
+	height: 50px;
+	width: 225px;
+	background-color: #d6cfbf;
+	color: #6d6a61;
+	margin-left: -15px;
+	font-size: 20px;
+}
+
+
+.select-geslacht select {
+	float: right;
+	height: 50px;
+	width: 85px;
+	background-color: #fac846;
+	margin-top: -38px;
+}
+
 .shirt-maat{
 	margin-top: 30px;
 	height: 290px;
