--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -863,6 +863,10 @@ img.music-photos{
 	padding-top: 50px;
 	
 }
+.backgroundcolor-scb2 img{
+	width: 295px;
+	margin-top: 10px;
+}
 
 .backgroundcolor-scb3{
 	height: 460px;
