--- a/App/assets/css/admin.css
+++ b/App/assets/css/admin.css
@@ -10,6 +10,14 @@ aside {
 	height: 100%;
 }
 
+.form-group{
+	background-color: #eee;
+	padding: 20px;
+	width: 99.9%;
+	display: block;
+	margin: 0 auto !important;
+}
+
 .bg-success{
 	color: green;
 }
