--- a/App/assets/css/simplePagination.css
+++ b/App/assets/css/simplePagination.css
@@ -119,11 +119,11 @@ ul.simple-pagination {
 
 .light-theme a:hover {
 	text-decoration: none;
-	background: #FCFCFC;
+	background: #fff;
 }
 
 .light-theme .current {
-	background: #666;
+	background: #484848;
 	color: #FFF;
 	border-color: #444;
 	box-shadow: 0 1px 0 rgba(255,255,255,1), 0 0 2px rgba(0, 0, 0, 0.3) inset;
