Typfout in css gefixed -.-; newsletter.php

--- a/App/assets/css/admin.css
+++ b/App/assets/css/admin.css
@@ -244,7 +244,7 @@ th{
 	font-size: 30px;
 	width: 100%;
 	background-color: #484848; 
-	color: #fffff;
+	color: #ffffff;
 	padding-left: 10px;
 	margin-bottom: 0px;
 	margin-top: 10px;
