giantbom on serious sam

--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -780,10 +780,7 @@ img.music-photos{
 	height: 480px;
 	padding-top: 50px;
 }
-.serious-sam-description{
-	height: 200px;
-	overflow-y: scroll;
-}
+
 
 .backgroundcolor-seriuos-sam3{
 	height: 380px;
@@ -892,6 +889,12 @@ img.music-photos{
 .product-img-scb {
 	height: 250px;
 	width: 300px;
+}
+
+/*giant bom api*/
+.serious-sam-description{
+	height: 320px;
+	overflow-y: hidden;
 }
 
 
