--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -480,7 +480,7 @@ EINDE LOGIN SCRIPT CSS
 }
 
 .arrow-down {
-	margin: 0 auto;
+	margin: 0 auto 20px auto;
 	width: 0;
 	border-left: 12px solid transparent;
 	border-right: 12px solid transparent;
@@ -497,6 +497,8 @@ EINDE LOGIN SCRIPT CSS
 
 .index-games{
 	height: auto;
+	width: 480px !important;
+	margin-left: 20px;
 }
 
 .tweet{
